# libexif

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Package.swift  README.md  bench.c  demo.c  libexif.c  libexif.h  test_exif.c
.github/workflows/: ci.yml
data/: test.tiff
patches/: wamr-longjmp-exce-check.patch
resources/: exiftool
scripts/: update-aot.sh
wrappers/swift-exif/Sources/CLibExif/: module.modulemap
wrappers/swift-exif/Sources/Exif/: Exif+Read.swift  Exif+Write.swift  Exif.swift  ExifConfig.swift  ExifError.swift
wrappers/swift-exif/Tests/ExifTests/: EdgeCaseTests.swift  ReadTests.swift  TestHelpers.swift  UnicodeTests.swift  WriteTests.swift
wrappers/swift-exif/libexif.xcframework/: Info.plist
wrappers/swift-exif/libexif.xcframework/_CodeSignature/: CodeDirectory  CodeRequirements  CodeResources  CodeSignature
wrappers/swift-exif/libexif.xcframework/macos-arm64/Headers/: module.modulemap
